--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PS70: Intro to Digital Fabrication</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
+    <!-- Include the Rubik Mono One font -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+</head>
+<body class="cloud-background">
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="container-fluid">
+            <div class="navbar-nav">
+                <h4><a class="nav-link home-btn" href="./index.html">Home</a></h4>
+                <h4><a class="nav-link" href="./about.html">About</a></h4>
+                <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
+            </div>
+        </div>
+    </nav>
 
-<title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+    <!-- Your other content goes here -->
+</body>
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #dcdcdc; color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
-    </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-      <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
-    </div>
-  </div>
-</nav>
 
-<body>
+
+<script src="./strapdown.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</html>
 
 <xmp style="display:none;">
 
