--- a/index.html
+++ b/index.html
@@ -10,18 +10,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 </head>
 <body class="cloud-background">
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <div class="navbar-nav">
-                <h4><a class="nav-link home-btn" href="./index.html">Home</a></h4>
-                <h4><a class="nav-link" href="./about.html">About</a></h4>
-                <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
-            </div>
-        </div>
-    </nav>
+  <nav class="navbar">
+      <!-- Home button, aligned to the left -->
+      <div class="navbar-nav home-button">
+          <h4><a class="nav-link home-btn" href="./index.html">Home</a></h4>
+      </div>
+      
+      <!-- Other buttons, aligned to the right -->
+      <div class="navbar-nav other-buttons">
+          <h4><a class="nav-link" href="./about.html">About</a></h4>
+          <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
+      </div>
+  </nav>
 
-    <!-- Your other content goes here -->
+
+    <!-- Title Row -->
+  <div class="title-row">
+    <h2 class="nav-title">
+        a<span class="floating-i">i</span>yanna 
+        <span class="floating-am">am</span>ara.
+    </h2>
+  </div>
+
 </body>
+
 
 
 
