making the home button into a sun!

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 </head>
 <body class="cloud-background">
   <nav class="navbar">
-      <!-- Home button, aligned to the left -->
-      <div class="navbar-nav home-button">
-          <h4><a class="nav-link home-btn" href="./index.html">Home</a></h4>
-      </div>
+    <!-- Home button, aligned to the left with sun rays -->
+    <div class="navbar-nav home-button">
+        <h4>
+            <a class="nav-link home-btn" href="./index.html">
+                Home
+                <span class="ray-1"></span> <!-- Additional ray -->
+                <span class="ray-2"></span> <!-- Additional ray -->
+            </a>
+        </h4>
+    </div>
       
       <!-- Other buttons, aligned to the right -->
       <div class="navbar-nav other-buttons">
@@ -27,10 +33,12 @@
     <!-- Title Row -->
   <div class="title-row">
     <h2 class="nav-title">
-        a<span class="floating-i">i</span>yanna 
-        <span class="floating-am">am</span>ara.
+        a<span class="floating-text"><span class="visible-i">i</span></span>yanna 
+        <span class="floating-text"><span class="visible-am">am</span></span>ara.
     </h2>
   </div>
+
+
 
 </body>
 
