adding picture of chia to repertoire

--- a/about.html
+++ b/about.html
@@ -27,17 +27,16 @@
 
 <p class="margin">   </p>
 <div class="center-row">
-  <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
+  <img src="./Bio_Pic.jpeg" alt="placeholder for you about me image">
   <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
+    Hi! my name's aiyanna, i'm a sophomore in leverett house concentrating in neuroscience with a secondary in AFVS film production!
   </p>
 </div>
 <br></br>
 
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
+and also this is my pet cat, chia!
 <br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
+<img src="./Chia_Pet.jpeg" alt="generic placeholder image">
 
 <br></br>
 Maybe even add a video?
