--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <title>PS70: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="./style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+
 
 
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
@@ -23,20 +25,22 @@
 
 
 
-<h3>About Me</h3>
+<h3 style="text-align: center;">About Me!</h3>
+
 
 <p class="margin">   </p>
 <div class="center-row">
   <img src="./Bio_Pic.jpeg" alt="placeholder for you about me image">
   <p id="aboutme">
-    Hi! my name's aiyanna, i'm a sophomore in leverett house concentrating in neuroscience with a secondary in AFVS film production!
+    Hi, everyone! I'm Aiyanna, a sophomore in Leverett House studying neuroscience with a secondary in AFVS film production... I have no experience in engineering, design or coding but I'm so ready to learn!
   </p>
 </div>
 <br></br>
 
-and also this is my pet cat, chia!
-<br></br>
-<img src="./Chia_Pet.jpeg" alt="generic placeholder image">
+<p class="pet-cat-text">also this is my pet cat Chia! (named after chia seeds and NOT chia pets)</p>
+
+<img src="./Chia_Pet.jpeg" alt="Chia the cat" class="chia-pic">
+
 
 <br></br>
 Maybe even add a video?
