added more pictures to the about page

--- a/about.html
+++ b/about.html
@@ -37,21 +37,27 @@
 </div>
 <br></br>
 
-<p class="pet-cat-text">also this is my pet cat Chia! (named after chia seeds and NOT chia pets)</p>
+<p class="pet-cat-text">This is my pet cat Chia! (named after chia seeds and NOT chia pets)</p>
 
 <img src="./Chia_Pet.jpeg" alt="Chia the cat" class="chia-pic">
 
 
 <br></br>
-Maybe even add a video?
-<br></br>
+<p class="crochet-text">In my free time I like to crochet, travel and radio dj!</p> <!-- Added class for styling -->
 
-<video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
-</video>
+<!-- Flexbox container for portrait and landscape images -->
+    <div class="image-row">
+      <!-- Portrait image on the left -->
+      <img src="./Crochet_Cow.jpeg" alt="A cow I've crocheted" class="crochet-img"> 
 
+      <!-- Stack two landscape images on top of each other -->
+      <div class="stacked-images">
+        <img src="./Taiwan_Pic.jpeg" alt="A Travel photo" class="second-img"> <!-- First landscape image -->
+        <img src="./Third_Image.jpeg" alt="Another image stacked" class="third-img"> <!-- Second landscape image -->
+      </div>
+    </div>
+  </div>
 
-</div>
 </xmp>
 </body>
 
