--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
 
 <br></br>
-<p class="crochet-text">In my free time I like to crochet, travel and radio dj!</p> <!-- Added class for styling -->
+<p class="crochet-text">In my free time I like to crochet and travel!</p> <!-- Added class for styling -->
 
 <!-- Flexbox container for portrait and landscape images -->
     <div class="image-row">
@@ -53,7 +53,7 @@
       <!-- Stack two landscape images on top of each other -->
       <div class="stacked-images">
         <img src="./Taiwan_Pic.jpeg" alt="A Travel photo" class="second-img"> <!-- First landscape image -->
-        <img src="./Third_Image.jpeg" alt="Another image stacked" class="third-img"> <!-- Second landscape image -->
+        <img src="./Hawaii_Pic.jpeg" alt="Another image stacked" class="third-img"> <!-- Second landscape image -->
       </div>
     </div>
   </div>
