--- a/index.html
+++ b/index.html
@@ -52,67 +52,60 @@
 
 <xmp style="display:none;">
 
-<div class="container-fluid bg-3 text-center">
-  
-  <div class="row">
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/week1-placeholder-image.jpg" alt = "week 1 placeholder"> </image>
-      <br>[Week 1: Intro](./01_intro/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2 placeholder"> </image>
-      <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3 placeholder"> </image>
-      <br>[Week 3: Fabrication](./03_fabrication/index.html)
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4 placeholder"> </image> 
-      <br>[Week 4: Programming](./04_microcontroller/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./05_3Ddesign/week5-placeholder-image.jpg" alt = "week 5 placeholder"> </image>
-      <br>[Week 5: 3D Design](./05_3Ddesign/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./06_inputs/week6-placeholder-image.jpg" alt = "week 6 placeholder"> </image>
-      <br>[Week 6: Inputs](./06_inputs/index.html)
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./07_outputs/week7-placeholder-image.jpg" alt = "week 7 placeholder"> </image>
-      <br>[Week 7: Outputs](./07_outputs/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./08_cnc/week8-placeholder-image.jpg" alt = "week 8 placeholder"> </image>
-      <br>[Week 8: CNC](./08_cnc/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./09_networking/week9-placeholder-image.jpg" alt = "week 9 placeholder"> </image>
-      <br>[Week 9: Networking](./09_networking/index.html)
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./10_machine/machine-placeholder-image.jpg" alt = "machine building placeholder"> </image>
-      <br>[Machine Building](./10_machine/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./13_finalproject/final-project-placeholder-image.jpg" alt = "final project placeholder"> </image> 
-      <br>[Final Project](./13_finalproject/index.html)
-    </div>
-  </div>
-</div>
+<!-- Unit Buttons (Solid Colored, Rounded Squares) -->
+  <div class="container-fluid bg-3 text-center" style="position: relative; z-index: 2; margin-top: 20px;">
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="./01_intro/index.html" class="unit-btn week-1-btn">Week 1: Intro</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="./02_2Ddesign/index.html" class="unit-btn week-2-btn">Week 2: 2D Design</a>
 
+      </div>
+      <div class="col-sm-4">
+        <a href="./03_fabrication/index.html" class="unit-btn week-3-btn">Week 3: Fabrication</a>
+      </div>
+    </div>
 
-</xmp>
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="./04_microcontroller/index.html" class="unit-btn week-4-btn">Week 4: Programming</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="./05_3Ddesign/index.html" class="unit-btn week-5-btn">Week 5: 3D Design</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="./06_inputs/index.html" class="unit-btn week-6-btn">Week 6: Inputs</a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="./07_outputs/index.html" class="unit-btn week-7-btn">Week 7: Outputs</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="./08_cnc/index.html" class="unit-btn week-8-btn">Week 8: CNC</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="./09_networking/index.html" class="unit-btn week-9-btn">Week 9: Networking</a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="./10_machine/index.html" class="unit-btn week-10-btn">Machine Building</a>
+      </div>
+      <div class="col-sm-4">
+        <a href="./13_finalproject/index.html" class="unit-btn final-project-btn">Final Project</a>
+      </div>
+    </div>
+  </div>
+
+  <xmp style="display:none;">
+    <!-- Keep your code here if needed, but don't use <xmp> for rendering actual content -->
+  </xmp>
+
+  <script src="./strapdown.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-<script src="./strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
-
 </html>
