working on my assignment 1 page

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="../style.css" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PS70: Intro to Digital Fabrication</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet"> <!-- Link to Rubik Mono One -->
+</head>
 
 
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title week-1-title">Week 1: Final Project Proposal</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -23,24 +28,22 @@
 <div class="textcontainer">
 <br></br>
 
-<h3>Week 1: Final Project Proposal</h3>
-
 <p class = "margin"></p>
-Here are at most 3 ideas for my final project
+<p class="project-intro">Here are at most 3 ideas for my final project</p>
 <p class = "margin"></p>
 
-<h4>Idea 1 : [INSERT IDEA 1]</h4>
+<h4>Idea 1: Water bottle cleaner and status checker!</h4>
 <p class = "margin"></p>
 
-Idea 1 description
+I'm really good at drinking water when my water bottles are clean.... after a certain point however I start to get suspicious that there's bacteria inside and a avoid it like the plague. I'm hoping to make a tool that can test the inside of my water bottle to see ow dirty it is and one that can clean it as well. Maybe with UV?
 
 <p class = "margin"></p>
 
 
-<h4>Idea 2: [INSERT IDEA 2]</h4>
+<h4>Idea 2: Friendly message keychain!</h4>
 <p class = "margin"></p>
 
-Idea 2 Description
+I'm horrible at responding to texts, it's not something to be proud of but unfortunately it's true :( the lucky thing for me is that the people I'm closest to are also horrible texters! so I'm trying to find a better way for us to all communicate with each other throughout the day... a keychain that me and my best friend can carry around and send one sentence messages to each other that we have no need to reply to with our phones. just the buttons on the keychain that correspond to different emoji reactions. It would be cute if it was shaped like small crochet animal!
 
 <p class = "margin"></p>
 
