--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 </div>
 <br></br>
 
-<p class="pet-cat-text">This is my pet cat Chia! (named after chia seeds and NOT chia pets)</p>
+<p class="pet-cat-text">This is my pet cat Chia! (named after the seed and NOT chia pets)</p>
 
 <img src="./Chia_Pet.jpeg" alt="Chia the cat" class="chia-pic">
 
