changed my description for project idea number 2

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -43,7 +43,7 @@ I'm really good at drinking water when my water bottles are clean.... after a ce
 <h4>Idea 2: Friendly message keychain!</h4>
 <p class = "margin"></p>
 
-I'm horrible at responding to texts, it's not something to be proud of but unfortunately it's true :( the lucky thing for me is that the people I'm closest to are also horrible texters! so I'm trying to find a better way for us to all communicate with each other throughout the day... a keychain that me and my best friend can carry around and send one sentence messages to each other that we have no need to reply to with our phones. just the buttons on the keychain that correspond to different emoji reactions. It would be cute if it was shaped like small crochet animal!
+I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that me and my friends can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) and can be replied to with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
 
 <p class = "margin"></p>
 
