changed the first project idea!

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -35,7 +35,8 @@
 <h4>Idea 1: Water bottle cleaner and status checker!</h4>
 <p class = "margin"></p>
 
-I'm really good at drinking water when my water bottles are clean.... after a certain point however I start to get suspicious that there's bacteria inside and a avoid it like the plague. I'm hoping to make a tool that can test the inside of my water bottle to see ow dirty it is and one that can clean it as well. Maybe with UV?
+I'm really good at drinking water when my water bottle is clean. However, 
+after a certain point I start to get suspicious that there's bacteria inside and a avoid it like the plague. I'm hoping to make a tool that can test the inside of my water bottle to see just how dirty it is! And if it's too dirty it can run a cleaning cycle.
 
 <p class = "margin"></p>
 
@@ -43,7 +44,7 @@ I'm really good at drinking water when my water bottles are clean.... after a ce
 <h4>Idea 2: Friendly message keychain!</h4>
 <p class = "margin"></p>
 
-I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that me and my friends can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) and can be replied to with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
+I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that my friends and i can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) and can be replied to with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
 
 <p class = "margin"></p>
 
