added mirror pic and added a third thing im interested in

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -44,7 +44,7 @@ after a certain point I start to get suspicious that there's bacteria inside and
 <h4>Idea 2: Friendly message keychain!</h4>
 <p class = "margin"></p>
 
-I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that my friends and i can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) and can be replied to with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
+I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that my friends and i can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) ideally, you would be able to send and reply to messages with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
 
 <p class = "margin"></p>
 
