working on third project idea

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -32,7 +32,7 @@
 <p class="project-intro">Here are at most 3 ideas for my final project</p>
 <p class = "margin"></p>
 
-<h4>Idea 1: Water bottle cleaner and status checker!</h4>
+<h4>First Idea: Water bottle cleaner and status checker!</h4>
 <p class = "margin"></p>
 
 I'm really good at drinking water when my water bottle is clean. However, 
@@ -41,20 +41,20 @@ after a certain point I start to get suspicious that there's bacteria inside and
 <p class = "margin"></p>
 
 
-<h4>Idea 2: Friendly message keychain!</h4>
+<h4>Second Idea: Friendly message keychain!</h4>
 <p class = "margin"></p>
 
 I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that my friends and i can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) ideally, you would be able to send and reply to messages with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
 
 <p class = "margin"></p>
 
-<h4>Idea 3: [INSERT IDEA 3]</h4>
+<h4>Third Idea: Smart Fashion mirror </h4>
 <p class = "margin"></p>
 
-Idea 3 Description
+Something that takes me forever is getting dressed before going out of the house! My idea is based off of the new(ish) fitness invention called MIRROR (image below). I would take this idea and apply it to my passion for fashion by making the mirror able to take a picture/screenshot of your current outfit and move it to a folder of past outfits. This serves as a way to document your outfits AND display them infront of you life-sized.  
 
 
-
+<img src="./mirror_pic.jpeg" alt="MIRROR Example" class="mirror-pic">
 </div>
 </xmp>
 </body>
