added another third idea and then uploaded a youtube video from the movie 'her'

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -48,7 +48,17 @@ I'm a great friend but not so great at replying to texts! and i'm lucky to have 
 
 <p class = "margin"></p>
 
-<h4>Third Idea: Smart Fashion mirror </h4>
+<h4>Third Idea: Handwritten Letter machine </h4>
+<p class = "margin"></p>
+
+Nothing beats the feeling of receiving a handwritten letter in the mail or just in general! But some of us (me) have horrible handwriting and therefore take forever to write things that other people are meant to read. On top of that, who has the time?? My idea is a robot that can hold a pen and then write notes for you in real time as you write your message out using a computer or phone. My hope is to make the handwriting look as authentic as possible by using AI. (as opposed to premade 'handwriting' fonts that don't mimic the variability of real handwriting). This could also be used as a tool to aid people with cognitive or physical disabilities for note taking during class. 
+
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=p_h0VjK3Stc&ab_channel=CarlCast" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class = "margin"></p>
+
+<h4>Bonus Idea: Smart Fashion mirror </h4>
 <p class = "margin"></p>
 
 Something that takes me forever is getting dressed before going out of the house! My idea is based off of the new(ish) fitness invention called MIRROR (image below). I would take this idea and apply it to my passion for fashion by making the mirror able to take a picture/screenshot of your current outfit and move it to a folder of past outfits. This serves as a way to document your outfits AND display them infront of you life-sized.  
