--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -27,8 +27,9 @@
 
 <h4>Kinetic Sculpture</h4>
 
+<p class = "margin"></p>
 
-
+My current idea is to make a kinetic sculpture that shows my cat playing with a laser toy
 
 </div>
 </xmp>
