adding photos for week 2!

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -48,7 +48,7 @@ I'm a great friend but not so great at replying to texts! and i'm lucky to have 
 
 <p class = "margin"></p>
 
-<h4>Third Idea: Handwritten Letter machine </h4>
+<h4>Third Idea: Handwritten Letter Machine </h4>
 <p class = "margin"></p>
 
 Nothing beats the feeling of receiving a handwritten letter in the mail or just in general! But some of us (me) have horrible handwriting and therefore take forever to write things that other people are meant to read. On top of that, who has the time?? My idea is a robot that can hold a pen and then write notes for you in real time as you write your message out using voice typing. My hope is to make the handwriting look as authentic as possible by using AI. (as opposed to premade 'handwriting' fonts that don't mimic the variability of real handwriting). This could also be used as a tool to aid people with cognitive or physical disabilities for note taking during class. 
