--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -32,16 +32,23 @@
 </div>
 <p class="margin">   </p>
 
-<h4>Assignment 1: Make a Box</h4>
+<h4>Assignment 1: I've made a box!</h4>
+
+This is the box: 
+<img src="./BoxFinalImage.jpeg" alt="Picture of my tool box" class="tool-box-pic">
 
 
 
 <h4>Assignment 2: Fusion 360 Tutorial</h4>
 
+Here is what I made by following the tutorial:
+<img src="./NotchPic.jpeg" alt="i promise i finished this tutorial" class="notch-pic">
+
 
 <h4>Assignment 3: Fusion Modeling</h4>
 
-
+I've made a screw:
+<img src="./ScrewPic.pdf" alt="screw loose" class="screw-pic">
 
 
 
