i'm a junior not a sophomore

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <div class="center-row">
   <img src="./Bio_Pic.jpeg" alt="placeholder for you about me image">
   <p id="aboutme">
-    Hi, everyone! I'm Aiyanna, a sophomore in Leverett House studying neuroscience with a secondary in AFVS film production... I have no experience in engineering, design or coding but I'm so ready to learn!
+    Hi, everyone! I'm Aiyanna, a junior in Leverett House studying neuroscience with a secondary in AFVS film production... I have no experience in engineering, design or coding but I'm so ready to learn!
   </p>
 </div>
 <br></br>
