I have no idea what this change is but I havent' updated it in a while

--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -29,7 +29,31 @@
 
 <p class = "margin"></p>
 
-My current idea is to make a kinetic sculpture that shows my cat playing with a laser toy
+A fun fact about me is that I am a cat person. One of my favorite cats is the stuffed tiger from the popular cartoon strip 'Calvin and Hobbes.' 
+<p class = "margin"></p>
+Hobbes and his friend Calvin like to go out and sled sometimes:
+
+<img src="./CalvinAndHobbesSledStrip.jpeg" alt="Calvin and Hobbes talk sledding and philosophy" class="CH-pic">
+
+I would like to make a kinetic sculpture that captures the essence of these sled rides. 
+<p class = "margin"></p>
+My first idea was to make a desktop rollercoaster:
+
+<img src="./DesktopRollercoaster.jpg" alt="This is a lot of work!" class="tool-box-pic">
+
+But this won't work due to my lack of time (and skills!)
+
+ <p class = "margin"></p>
+Here is my second idea: 
+
+<img src="./SledSketch.jpeg.jpg" alt="If you can't see this it's alright" class="tool-box-pic">
+
+I know this drawing is beautiful but I've signed it so you can't steal it.
+ <p class = "margin"></p>
+
+ okay so let's get started recreating this sled: 
+
+<img src="./WoodenSled.jpg" alt="Look up 'wooden sled' if this doesn't show up" class="tool-box-pic">
 
 </div>
 </xmp>
