--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -81,7 +81,7 @@ long tx_rx() {
 
   </code></pre>
 
-<p> okay after coming up with some sketchy capcitor measuring methods: <p>
+ okay after coming up with some sketchy capcitor measuring methods...
 
 <img src="./SketchyMeasuringMethod.jpeg" alt="SketchyMeasuringMethod" class="tool-box-pic">
 
@@ -89,6 +89,37 @@ long tx_rx() {
   here is my final graph: 
 
   <img src="./CapacitorGraph.jpg" alt="Capacitor Graph" class="tool-box-pic">
+
+  As we can see, as the two copper plates touch each other, the value exceeds 5000 units! This is going to be useful in programming my morse code encoder. I want to alter my code so that once the value exceeds 5000 units, it will print a dot out on the screen. To do this I just added this line of code: 
+
+  <pre><code class="language-cpp">  
+Copy code
+if (result > 5000) {
+  Serial.print(".");            // Print a period if result is greater than 5000
+}
+
+  </code></pre>
+
+added this to make a clear space to print: 
+  <pre><code class="language-cpp"> 
+void loop() {
+  // Print newlines to simulate clearing the screen
+  for (int i = 0; i < 10; i++) {
+    Serial.println();            // Print 10 newlines to create space
+  }
+    </code></pre>
+
+and deleted this line: 
+  <pre><code class="language-cpp">  
+Serial.println(result);
+  </code></pre>
+
+Also: (also), I added popsicle sticks to my coppers in order to make them easier to tap: 
+  <img src="./PopStickCopper.jpeg" alt="PopStickCopper" class="tool-box-pic">
+
+Should I add smiley faces to them? 
+  <img src="./CopperLovers.jpeg" alt="CopperLovers" class="tool-box-pic">
+Too late. I've already done it. Coppertina and Coppertino are lovers. 
 
 <h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
 
