--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -135,10 +135,10 @@ Too late. I've already done it. Copper and Coppertino are lovers.
 
 Here they are in action: 
 
-  <video width="600" controls>
-    <source src="./DotAndDash.mov" type="video/quicktime">
-    Your browser does not support the video tag.
-  </video>
+<video width="600" controls>
+  <source src="./DotAndDash.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 <h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
 
