okay second try

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -37,6 +37,10 @@
 This is the box: 
 <img src="./BoxFinalImage.jpeg" alt="Picture of my tool box" class="tool-box-pic">
 
+Process:
+
+At first I wanted to make a box with a butterfly shaped bottom. The challenge of that design would be making curved edges where the wings were. We learned about 'living hinges' as a way to make flat surfaces like wood and carboard curve
+
 
 
 <h4>Assignment 2: Fusion 360 Tutorial</h4>
