--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -248,6 +248,8 @@ long tx_rx() {                       // Function to execute tx_rx algorithm
   Your browser does not support the video tag.
 </video>
 
+Pretty cool awesome awesome awesome!!! 
+
 <h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
 
 </div>
