okay this should be good enough for show and tell

--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -246,7 +246,18 @@ long tx_rx() {                       // Function to execute tx_rx algorithm
   Your browser does not support the video tag.
 </video>
 
-Pretty cool awesome awesome awesome!!! 
+Pretty cool awesome awesome awesome!!! <br>
+
+Okay so here is my first attempt at typing my name, Aiyanna Amara, using this method: 
+
+  <img src="./AIYONAAMARA.jpeg" alt="AIYONAAMARA" class="tool-box-pic">
+
+  <br>
+  Here's what it actually says: 
+
+<img src="./Translation.jpg" alt="Translation" class="tool-box-pic">
+
+I mean it's not my name, but for a first attempt close enough!!
 
 <h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
 
