--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -257,10 +257,10 @@ Okay so here is my first attempt at typing my name, Aiyanna Amara, using this me
 
 <img src="./Translation.jpg" alt="Translation" class="tool-box-pic">
 
-I mean it's not my name, but for a first attempt close enough!!
+I mean it's not my name, but for a first attempt close enough!! <br>
 
-<h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
-
+<h3>Assignment 2: [Use + Calibrate Another Sensor]</h3>
+<h4> <br> Coming soon...
 </div>
 </xmp>
 </body>
