--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -33,6 +33,10 @@ A morse code encoder that relies on the distance between two sensors to determin
 
 <img src="./FirstCapSetUp.jpeg" alt="Capacitor Set Up" class="tool-box-pic">
 
+I used the Tx-Rx capacitor sensing from the intro to capacitance slide on the ps70 website: 
+
+<img src="./txrx_schematic.jpg" alt="txrx_schematic" class="tool-box-pic">
+
 Awesome. The next step is to figure out how to collect data for calibration of the sensor!
 and turn this: 
 <img src="./UnCalGraph.jpg" alt="Uncalibrated Graph" class="tool-box-pic">
